# 261-Final-Project

./: 3.13-modeling-analysis.ipynb  404.html  Makefile  README.md  index.html  pyproject.toml  sitemap.xml
docs/: mkdocs.yml
flightdelays/: __init__.py  dataset.py  features.py  plots.py  utils.py
getting-started/: index.html
notebooks/: (Clone) 0.08-mas-data-join-pipeline.ipynb  (Clone) 1.12-sg-joined-cleaning-engineering-SANDBOX.ipynb  (Clone) 3.12-sg-joined-feateng-modeling.ipynb  (Clone) 3.14-eil-5y-modeling.ipynb  (Clone) hw5_workbook_Spring2025_Team_4_1.ipynb  (EIL Clone) 3.15-mas-modeling-pipeline-with-tuning.ipynb  (EIL Clone) 3.xx-dy-rf-mlp-pipeline-sandbox.ipynb  (Feature Experiments Clone) (EIL Clone) 3.15-mas-modeling-pipeline-with-tuning.ipynb  0.01-eil-flights-cleaning.ipynb  0.01-mas-dir-and-raw-data-prep.ipynb  0.01-mas-initial-EDA.ipynb  0.02-team-OTPW-EDA.ipynb  0.03-mas-weather-cleanup.ipynb  0.03-sg-weather-EDA.ipynb  0.03-sg-weather-clean-CLEAN.ipynb  0.03-sg-weather-clean-SANDBOX.ipynb  0.03-sg-weather-clean-sandbox.ipynb  0.03-sg-weather-clean.ipynb  0.04-eil-flights-cleaning.ipynb  0.05-mas-3m-table-join-EDA.ipynb  0.05-mas-3m-table-joins.ipynb  0.06-eil-flights-eda.ipynb  0.07-eil-otpw-cleaning.ipynb  0.08-mas-data-join-pipeline.ipynb  0.09-eil-otpw-modeling.ipynb  0.12-sg-1y-joined-cleaning.ipynb  0.12-sg-joined-cleaning.ipynb  1.01-mas-feature-pipeline-dev.ipynb  1.02-sg-experimental-antileak-feats.ipynb  1.02-sg-integrate-pipeline-feats.ipynb  1.04-eil-flights-cleaning.ipynb  1.06-eil-flights-eda.ipynb  1.10-dy-joined-prior-feat-eng.ipynb  (+35 more)
(+10 files in other folders)
