[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "flightdelays"
version = "0.0.1"
description = "Flight delays create problems in scheduling for airlines and airports, leading to passenger inconvenience and huge economic losses. As a result, there is growing interest in predicting flight delays to optimize operations and improve customer satisfaction. In this project, we will predict flight delays using the DOT flights and NOAA weather datasets from 2015 to 2021."
authors = [
  { name = "MEDS" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12"


[tool.ruff]
line-length = 99
src = ["flightdelays"]
include = ["pyproject.toml", "flightdelays/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["flightdelays"]
force-sort-within-sections = true

